<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_content">با اسنپ سفرهای درون شهری شما رنگ و بوی تازه‌ای می‌گیرد و هر ساعت از شبانه روز به مقصد خواهید رسید. کافیست مبدا و مقصد را مشخص کرده و پس از مشاهده هزینه سفر، گزینه درخواست را لمس کنید تا نزدیکترین اسنپ برای انجام سفرهای درون شهری در اختیار شما قرار بگیرد. ما به عنوان رابط بین شما و رانندگان شهر تهران، تلاش می‌کنیم تا سفر بسیار خوبی را تجربه کنید.</string>
    <string name="about_snapp">درباره اسنپ</string>
    <string name="access_to_statistic_data">دسترسی به اطلاعات اماری</string>
    <string name="action_tour_start_request">شروع درخواست</string>
    <string name="activate_code">کد فعالسازی</string>
    <string name="add_credit">افزایش موجودی</string>
    <string name="add_credit_amount">مبلغ افزایش (ریال)</string>
    <string name="add_credit_from">افزایش موجودی از طریق :</string>
    <string name="add_credit_label">برای افزایش موجودی دکمه + را انتخاب کنید</string>
    <string name="add_favorite">اضافه کردن آدرس منتخب …</string>
    <string name="add_favorite_address">اضافه کردن آدرس منتخب</string>
    <string name="add_shrotcut_to_home">اضافه کردن میانبر</string>
    <string name="add_this_address">اضافه کردن این آدرس</string>
    <string name="address_for_driver_route_detail">جزئیات آدرس جهت مسیریابی راننده :</string>
    <string name="address_hint_favorite">کوچه٬ پلاک٬ واحد و …</string>
    <string name="adjust_passenger_production_appkey">vn7x9leuzff9</string>
    <string name="amount_needed_for_charge">شارژ آنلاین مورد نیاز:</string>
    <string name="ap_register_error">مشکلی در ارتباط با سرور رخ داده، لطفا دوباره تلاش کنید</string>
    <string name="ap_retry_message">خطای دسترسی به کیف پول آپ</string>
    <string name="ap_wallet">کیف پول آپ</string>
    <string name="ap_wallet_activation">فعال‌سازی کیف پول آپ</string>
    <string name="ap_wallet_activation_description">با اتصال کیف پول آب به حساب اسنپ‌تان می‌توانید از موجودی آن برای درخواست اسنپ، خرید شارژ، خرید غذا، رزرو هتل و… استفاده کنید.</string>
    <string name="ap_wallet_activation_description_more_info">اطلاعات بیشتر ⓘ</string>
    <string name="ap_wallet_change_description">اگر شماره موبایل‌ اسنپ‌تان را تغییر بدهید، اتصال کیف پول آپ شما قطع می‌شود. ولی موجودی کیف پول قبلی‌تان محفوظ است و می‌توانید آن را به کیف پول جدید منتقل کنید.</string>
    <string name="ap_wallet_change_title">تغییر اتصال کیف پول آپ</string>
    <string name="ap_wallet_payment">پرداخت از کیف پول آپ</string>
    <string name="app_font">fonts/iran_sans_mobile_medium.ttf</string>
    <string name="app_font_path_iran_sans_mobile_light">fonts/iran_sans_mobile_light.ttf</string>
    <string name="app_font_path_iran_sans_mobile_medium">fonts/iran_sans_mobile_medium.ttf</string>
    <string name="app_name">Snapp</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_id">cab.snapp.passenger.play</string>
    <string name="apply">اعمال</string>
    <string name="arabic">العربیه</string>
    <string name="area">محدوده :</string>
    <string name="attention">توجه</string>
    <string name="available_credit">موجودی فعلی:</string>
    <string name="back_button_desc">بازگشت</string>
    <string name="backpay_credit">سند اصلاحی</string>
    <string name="bank_card">کارت عضو شتاب</string>
    <string name="barcode_scan">اسکن بارکد</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_snapp">تماس با پشتیبانی اسنپ</string>
    <string name="call_snapp_box">تماس با پشتیبانی اسنپ باکس</string>
    <string name="call_to_driver">تماس با هم‌راه</string>
    <string name="cancel_request">لغو درخواست</string>
    <string name="cancel_ride">انصراف از سفر</string>
    <string name="cancel_ride_label">لغو سفر</string>
    <string name="cancel_ride_without_charge_message">راننده اسنپ در راه مبدأ شما است. آیا قصد لغو سفر خود را دارید؟</string>
    <string name="cant_create_account">مشکلی در ساخت اکانت وجود دارد</string>
    <string name="cash">نقدی</string>
    <string name="cash_payment_by_recipient">پرداخت نقدی توسط گیرنده</string>
    <string name="cash_payment_warning">در پرداخت نقدی امکان استفاده از موجودی وجود ندارد.</string>
    <string name="cellular">اینترنت موبایل</string>
    <string name="change_ap_wallet_phone_number">تغییر شماره موبایل آپ</string>
    <string name="change_email_address">تغییر آدرس ایمیل</string>
    <string name="change_mobile_number">تغییر شماره همراه</string>
    <string name="change_number">اصلاح شماره</string>
    <string name="change_service_type">تغییر نوع سرویس</string>
    <string name="character_counter_0_500">۰/۵۰۰</string>
    <string name="character_counter_500">/۵۰۰</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_choose_operator">اپراتور شماره موبایل وارد شده را انتخاب کنید</string>
    <string name="charge_type">نوع شارژ</string>
    <string name="charge_type_not_found">بسته ای یافت نشد</string>
    <string name="charge_view_mobile_phone_number_hint">*********۰۹</string>
    <string name="choose">انتخاب</string>
    <string name="choose_second_dest">انتخاب مقصد دوم</string>
    <string name="close">بستن</string>
    <string name="code_expire_time">مدت اعتبار کد: 00:60</string>
    <string name="com.crashlytics.android.build_id">6001a8a1-36b3-4cc4-9769-f5060fcc4f71</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_description">توضیحات کامل</string>
    <string name="confirm_and_pay">تأیید و پرداخت</string>
    <string name="deliver_to">تحویل گیرنده</string>
    <string name="description">توضیحات</string>
    <string name="enter_mobile_number">ورود شماره همراه</string>
    <string name="enter_valid_phone_number">شماره همراه وارد شده صحیح نیست</string>
    <string name="exact_address">آدرس دقیق تحویل‌ گیرنده</string>
    <string name="example_phone_number">مثال: ۰۹۱۲۳۴۵۶۷۸۹</string>
    <string name="full_name">نام کامل</string>
    <string name="profile_address_hint">آدرس:</string>
    <string name="profile_birth_date_hint">تاریخ تولد</string>
    <string name="profile_confirm_your_email">ایمیل خود را تایید کنید…</string>
    <string name="profile_email_hint">آدرس ایمیل</string>
    <string name="profile_email_is_approved">ایمیل تایید شده</string>
    <string name="profile_enter_full_name">نام و نام خانوادگی را وارد بکنید</string>
    <string name="profile_enter_mobile_number">ورود شماره همراه</string>
    <string name="profile_enter_your_email_address">ایمیل خود را وارد کنید</string>
    <string name="profile_fullname_hint">نام و نام خانوادگی</string>
    <string name="profile_gender_hint">جنسیت</string>
    <string name="profile_mobile_number_hint">ورود شماره همراه</string>
    <string name="profile_send_verification_email_again">ارسال مجدد ایمیل تایید</string>
    <string name="resend_code_verification_by_sms">دریافت مجدد کد با پیامک</string>
    <string name="send">ارسال</string>
    <string name="snapp_need_your_number">اسنپ نیاز دارد تا شماره همراه شما را تأیید کند. لطفاً شماره همراه خود را وارد کنید تا کد تأیید برای شما ارسال شود</string>
    <string name="snappbox_desc_hint">درباره این درخواست</string>
    <string name="verification_code">کد فعال‌سازی</string>
    <string name="view_log_in">ورود</string>
    <string name="view_log_in_dont_have_an_account">عضو نیستید؟</string>
    <string name="view_log_in_forgot_password">رمز عبورتان را فراموش کردید؟</string>
    <string name="view_log_in_instruction">با استفاده از یکی از روش‌های زیر وارد حساب کاربری خود شوید</string>
    <string name="view_log_in_phone_hint">شماره همراه</string>
    <string name="view_log_in_sign_up">ثبت‌نام کنید</string>
    <string name="view_log_in_with_email_and_password">ورود با آدرس ایمیل و گذرواژه</string>
    <string name="view_log_in_with_google">حساب گوگل</string>
    <string name="view_log_in_with_phone_number">شماره همراه</string>
    <string name="view_sign_up_email_hint">آدرس ایمیل</string>
    <string name="view_sign_up_or">یا</string>
    <string name="view_sign_up_password_hint">گذرواژه</string>
</resources>