<?xml version="1.0" encoding="utf-8"?>
<cab.snapp.passenger.units.profile.ProfileView android:orientation="vertical" android:background="@color/pure_white" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/view_toolbar_primary" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_name_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:etGravity="start" app:etHint="@string/profile_fullname_hint" app:etImeOption="done" app:etInformationTextError="@string/profile_enter_full_name" app:etInputType="text" app:etMaxLine="1" app:etTextIcon="@drawable/ic_account_circle_gray_24dp" app:etTextIconActivated="@drawable/ic_account_circle_black_24px" />
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_phone_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textDirection="ltr" app:etClickableMode="true" app:etGravity="start" app:etHint="@string/profile_mobile_number_hint" app:etInformationTextError="@string/profile_enter_mobile_number" app:etTextIcon="@drawable/ic_smartphone_gray_24dp" app:etTextIconActivated="@drawable/ic_smartphone_black_24px" />
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_email_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:etBtnActionIcon="@drawable/vector_ic_refresh_black_24dp" app:etBtnActionText="@string/profile_send_verification_email_again" app:etClickableMode="true" app:etGravity="start" app:etHint="@string/profile_email_hint" app:etInformationTextActivated="@string/profile_email_is_approved" app:etInformationTextActivatedIcon="@drawable/vector_ic_check_black_24dp" app:etInformationTextError="@string/profile_enter_your_email_address" app:etInformationTextNormal="@string/profile_confirm_your_email" app:etTextIcon="@drawable/vector_ic_email_gray_24dp" app:etTextIconActivated="@drawable/ic_email_black_24px" />
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_address_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:etGravity="start" app:etHint="@string/profile_address_hint" app:etInputType="textMultiline" app:etMaxLine="4" app:etTextIcon="@drawable/ic_home_gray_24dp" app:etTextIconActivated="@drawable/ic_home_black_24px" />
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_gender_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:etClickableMode="true" app:etGravity="start" app:etHint="@string/profile_gender_hint" app:etTextIcon="@drawable/ic_wc_gray_24dp" app:etTextIconActivated="@drawable/ic_wc_black_24px" />
            <cab.snapp.snappuikit.SnappEditText android:id="@id/profile_birthday_edit_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:etClickableMode="true" app:etGravity="start" app:etHint="@string/profile_birth_date_hint" app:etTextIcon="@drawable/ic_cake_gray_24dp" app:etTextIconActivated="@drawable/ic_cake_black_24px" />
        </LinearLayout>
    </ScrollView>
</cab.snapp.passenger.units.profile.ProfileView>