<?xml version="1.0" encoding="utf-8"?>
<cab.snapp.passenger.units.login.loginWithEmail.LoginWithEmailView android:background="@color/pure_white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/sign_up_header_height">
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/sign_up_header_img_width" android:layout_height="@dimen/sign_up_header_img_height" android:layout_marginBottom="@dimen/margin_small" android:src="@drawable/img_signup" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/brown_grey" android:gravity="center" android:layout_height="24.0dip" android:layout_marginTop="@dimen/margin_medium" android:text="@string/view_log_in_instruction" android:layout_marginStart="@dimen/margin_medium" android:layout_marginEnd="@dimen/margin_medium" app:autoSizeMaxTextSize="@dimen/font_size_medium" app:autoSizeMinTextSize="@dimen/font_size_tiny" app:autoSizeTextType="uniform" style="@style/TextView.Default.Medium" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:paddingStart="@dimen/margin_small" android:paddingEnd="@dimen/margin_small">
            <cab.snapp.snappuikit.SnappButton android:id="@id/view_log_in_with_google_button" android:layout_width="0.0dip" android:layout_weight="1.0" android:layout_marginStart="@dimen/margin_small" android:layout_marginEnd="@dimen/margin_small" app:btnIconEnd="@drawable/ic_google_logo_24px" app:btnIsRounded="true" app:btnText="@string/view_log_in_with_google" app:btnTextGravity="start" style="@style/SnappButton.Neutral.Large" />
            <cab.snapp.snappuikit.SnappButton android:id="@id/view_log_in_with_phone_number_button" android:layout_width="0.0dip" android:layout_weight="1.0" android:layout_marginStart="@dimen/margin_small" android:layout_marginEnd="@dimen/margin_small" app:btnIconEnd="@drawable/ic_perm_phone_msg_black_24px" app:btnIsRounded="true" app:btnText="@string/view_log_in_with_phone_number" app:btnTextGravity="start" style="@style/SnappButton.Neutral.Large" />
        </LinearLayout>
        <RelativeLayout android:id="@id/panel_separator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium">
            <View android:background="@color/very_light_pink" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_centerInParent="true" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/brown_grey" android:background="@color/pure_white" android:paddingLeft="@dimen/margin_medium" android:paddingRight="@dimen/margin_medium" android:text="@string/view_sign_up_or" android:layout_centerInParent="true" style="@style/TextView.Default.Medium" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/brown_grey" android:gravity="center" android:layout_marginTop="@dimen/margin_medium" android:text="@string/view_log_in_with_email_and_password" style="@style/TextView.Default.Medium" />
        <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <cab.snapp.snappuikit.SnappEditText android:id="@id/view_log_in_email_edit_text" android:layout_marginStart="@dimen/padding_medium" android:layout_marginEnd="@dimen/padding_medium" app:etColor="@color/colorPrimary" app:etHint="@string/view_sign_up_email_hint" app:etHintColor="@color/brown_grey" app:etImeOption="next" app:etInputType="email" app:etTextIcon="@drawable/ic_email" style="@style/SnappEditText" />
        <cab.snapp.snappuikit.SnappEditText android:id="@id/view_log_in_password_edit_text" android:layout_marginStart="@dimen/padding_medium" android:layout_marginEnd="@dimen/padding_medium" app:etColor="@color/colorPrimary" app:etHint="@string/view_sign_up_password_hint" app:etHintColor="@color/brown_grey" app:etImeOption="done" app:etInputType="password" app:etTextIcon="@drawable/ic_password" style="@style/SnappEditText" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/green_blue_two" android:layout_gravity="start" android:id="@id/view_log_in_forgot_password_textview" android:paddingTop="@dimen/margin_small" android:paddingBottom="@dimen/margin_medium" android:text="@string/view_log_in_forgot_password" android:layout_marginStart="@dimen/padding_medium" android:layout_marginEnd="@dimen/padding_medium" style="@style/TextView.Bold.Medium" />
        <cab.snapp.snappuikit.SnappButton android:id="@id/view_log_in_button" android:layout_marginTop="@dimen/margin_large" android:layout_marginStart="@dimen/padding_medium" android:layout_marginEnd="@dimen/padding_medium" app:btnHasShadow="false" app:btnIsRounded="true" app:btnText="@string/view_log_in" style="@style/SnappButton.Accent.Large" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_medium">
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/brown_grey" android:layout_gravity="start" android:paddingTop="@dimen/margin_small" android:paddingBottom="@dimen/margin_medium" android:text="@string/view_log_in_dont_have_an_account" style="@style/TextView.Bold.Large" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/green_blue_two" android:layout_gravity="start" android:id="@id/view_log_in_sign_up_textview" android:paddingTop="@dimen/margin_small" android:paddingBottom="@dimen/margin_medium" android:text="@string/view_log_in_sign_up" android:layout_marginStart="@dimen/margin_small" style="@style/TextView.Bold.Large" />
        </LinearLayout>
    </LinearLayout>
</cab.snapp.passenger.units.login.loginWithEmail.LoginWithEmailView>