<?xml version="1.0" encoding="utf-8"?>
<cab.snapp.passenger.units.phone_verification.PhoneVerificationView android:background="@drawable/shape_rounded_rectangle_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/view_phone_verification_top_icon_iv" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="21.0dip" android:src="@drawable/ic_dialog_verification_base" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/colorPrimary" android:gravity="center_horizontal" android:id="@id/view_phone_verification_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/enter_mobile_number" android:layout_below="@id/view_phone_verification_top_icon_iv" android:layout_centerHorizontal="true" style="@style/TextView.Bold.ExtraLarge" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/colorPrimary" android:gravity="start" android:id="@id/view_phone_verification_desc_text_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="14.0dip" android:text="@string/snapp_need_your_number" android:layout_below="@id/view_phone_verification_title_tv" android:layout_centerHorizontal="true" style="@style/TextView.Light.Large" />
    <FrameLayout android:id="@id/view_phone_verification_et_frame" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/view_phone_verification_desc_text_tv">
        <cab.snapp.snappuikit.SnappEditText android:id="@id/view_phone_verification_enter_number_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" app:etHint="@string/example_phone_number" app:etHintColor="#ffd6dade" app:etInformationTextError="@string/enter_valid_phone_number" app:etInputType="phone" app:etMaxLength="11" app:etTextIcon="@null" app:etTextIconActivated="@null" />
        <cab.snapp.snappuikit.SnappEditText android:id="@id/view_phone_verification_enter_code_et" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" app:etHint="@string/verification_code" app:etHintColor="#ffd6dade" app:etInformationTextError="@string/enter_valid_phone_number" app:etInputType="number" app:etTextIcon="@null" app:etTextIconActivated="@null" />
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/bluish_grey" android:gravity="center_horizontal" android:id="@id/view_phone_verification_code_expire_timer_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/code_expire_time" android:layout_below="@id/view_phone_verification_et_frame" android:layout_centerHorizontal="true" style="@style/TextView.Default.Medium" />
    <LinearLayout android:orientation="vertical" android:id="@id/view_phone_verification_resend_btn_area_linear" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="14.0dip" android:layout_below="@id/view_phone_verification_code_expire_timer_tv">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/colorAccent" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/view_phone_verification_resend_code_by_sms_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resend_code_verification_by_sms" style="@style/TextView.Default.Large" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/view_phone_verification_resend_btn_area_linear">
        <LinearLayout android:layout_gravity="top" android:orientation="horizontal" android:id="@id/view_phone_verification_btn_area_linear" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_default">
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/pure_white" android:gravity="center" android:layout_gravity="center" android:id="@id/view_phone_verification_positive_btn_text_view" android:background="@drawable/selector_button_accent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/send" android:layout_weight="1.0" style="@style/TextView.Bold.Medium" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/selector_text_primary_to_pure_white" android:gravity="center" android:layout_gravity="center" android:id="@id/view_phone_verification_negative_btn_text_view" android:background="@drawable/selector_button_pure_white" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/close" android:layout_weight="1.0" style="@style/TextView.Bold.Medium" />
        </LinearLayout>
        <View android:layout_gravity="top" android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height_small" />
    </FrameLayout>
</cab.snapp.passenger.units.phone_verification.PhoneVerificationView>