<?xml version="1.0" encoding="utf-8"?>
<cab.snapp.passenger.units.box_options.BoxOptionsView android:orientation="vertical" android:background="@color/zircon" android:paddingBottom="@dimen/padding_medium" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/padding_medium" android:paddingEnd="@dimen/padding_medium"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/view_box_option_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.4" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/silver_chalice" android:gravity="bottom" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/deliver_to" style="@style/TextView.Default.Medium" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/font_size_medium" android:textColorHint="@color/silver_chalice" android:id="@id/view_box_options_fullname_et" android:background="@drawable/shape_rounded_rectangle_alto_30_opacity" android:padding="@dimen/padding_small" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_small" android:hint="@string/full_name" android:singleLine="true" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/view_box_options_mobile_et" android:layout_marginEnd="@dimen/margin_small" style="@style/EditText">
                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/font_size_medium" android:textColorHint="@color/silver_chalice" android:gravity="right" android:id="@id/view_box_options_mobile_et" android:background="@drawable/shape_rounded_rectangle_alto_30_opacity" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/view_log_in_phone_hint" android:singleLine="true" android:maxLength="11" android:inputType="phone" android:imeOptions="actionNext" android:nextFocusForward="@id/view_box_options_address_et" style="@style/EditText" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/silver_chalice" android:gravity="left" android:padding="@dimen/padding_very_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/example_phone_number" style="@style/TextView.Light.Small" />
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/silver_chalice" android:gravity="bottom" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exact_address" style="@style/TextView.Default.Medium" />
        <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/font_size_medium" android:textColorHint="@color/silver_chalice" android:id="@id/view_box_options_address_et" android:background="@drawable/shape_rounded_rectangle_alto_30_opacity" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/address_hint_favorite" android:singleLine="true" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/view_box_options_desc_et" style="@style/EditText" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.4" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/silver_chalice" android:gravity="bottom" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description" style="@style/TextView.Default.Medium" />
        <androidx.appcompat.widget.AppCompatEditText android:textSize="@dimen/font_size_medium" android:textColorHint="@color/silver_chalice" android:id="@id/view_box_options_desc_et" android:background="@drawable/shape_rounded_rectangle_alto_30_opacity" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/snappbox_desc_hint" android:singleLine="true" android:inputType="textNoSuggestions" android:imeOptions="actionDone" style="@style/EditText" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium">
            <cab.snapp.snappuikit.SnappCheckBox android:gravity="end" android:layout_gravity="end" android:id="@id/view_box_options_cash_by_recipient_chbox" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/silver_chalice" android:gravity="start" android:id="@id/view_box_options_cash_by_recipient_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cash_payment_by_recipient" android:layout_weight="1.0" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" style="@style/TextView.Default.Medium" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.2" />
    </LinearLayout>
</cab.snapp.passenger.units.box_options.BoxOptionsView>